--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <footer class="mastfoot mt-auto">
             <div class="inner">
                 <p>by
-                    <a href="https://twitter.com/zanza">@zanza00</a>.</p>
+                    <a href="https://twitter.com/zanza00">@zanza00</a>.</p>
             </div>
         </footer>
     </div>
